@startuml

title __METERS.APP's Class Diagram__\n

  namespace com.example.meters {
    class com.example.meters.BuildConfig {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.FilledMeterFragment {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.HTTPResponse {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.MainActivity {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.Meter {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.MeterList {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.RegisterActivity {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.ServerConnecter {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.SignInActivity {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.Singleton {
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.User {
    }
  }
  

  com.example.meters.FilledMeterFragment -up-|> androidx.fragment.app.Fragment
  com.example.meters.FilledMeterFragment o-- com.example.meters.Singleton : singleton
  com.example.meters.MainActivity -up-|> androidx.fragment.app.FragmentActivity
  com.example.meters.MainActivity o-- com.example.meters.Singleton : singletone
  com.example.meters.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.meters.RegisterActivity o-- com.example.meters.Singleton : singleton
  com.example.meters.ServerConnecter -up-|> android.os.AsyncTask
  com.example.meters.ServerConnecter o-- com.example.meters.Singleton : singleton
  com.example.meters.SignInActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.meters.SignInActivity o-- com.example.meters.Singleton : dataSingleton
  com.example.meters.Singleton o-- com.example.meters.MeterList : meters
  com.example.meters.User o-- com.example.meters.ServerConnecter : connecter
  com.example.meters.User o-- com.example.meters.Singleton : singleton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
